// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@modernpoacher/cogs/cogs/password/field <Field /> With additional props renders 1`] = `
<input
  className="MOCK CLASSNAME"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  readOnly={true}
  required={true}
  type="password"
/>
`;

exports[`@modernpoacher/cogs/cogs/password/field <Field /> With required props renders 1`] = `
<input
  className="MOCK CLASSNAME"
  name="MOCK NAME"
  type="password"
/>
`;
